# VoidLink

./: Cargo.toml  README.md  default_config.toml
.github/scripts/: generate_aur_files.sh
.github/workflows/: aur-update.yml
src/: app.rs  config.rs  event.rs  main.rs  theme.rs  tui.rs
src/bluetooth/: agent.rs  mod.rs  types.rs  worker.rs
src/ui/: detail_panel.rs  device_list.rs  help.rs  key_bar.rs  mod.rs  popup.rs  spinner.rs  status_bar.rs
